feat(dag): validation and persistence of the metadata of existing dag
